System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Radeon RX 560 Series ATI Technologies Inc. 4.5.13587 Core Profile Context 20.2.2 26.20.15019.19000
Blender Version
Broken: version: 2.83 (sub 11), branch: master, commit date: 2020-03-29 21:36, hash: rBa103d09df485
Worked: (newest version of Blender that worked as expected)
Short description of error
In Blender 2.83 (and lower), the small arrow UI that appears on mouseover for the frame selection range in physics tab for fluid mantaflow does not work correctly.
Exact steps for others to reproduce the error
It cannot go down from 1 to 0 when clicking the left arrow. Unlike the timeline frame range arrowS that work as they should.
Thanks.