Fix T75210: Frame range does not go down to 0 in the physics tab for mantaflow when clicking the left arrow

Added nore flexibility to cache frame range and ensured validity of frame range.